--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "node": ">=16 <18"
   },
   "scripts": {
+    "install":"npm run install --force",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
