--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "build:prod": "cross-env NODE_ENV=production nest build"
   },
   "dependencies": {
+      "@casl/ability": "^6.5.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
