--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@nestjs/typeorm": "^10.0.0",
     "@types/multer": "^1.4.7",
     "@types/passport": "^1.0.12",
-    "aws-sdk": "^2.1421.0",
+     "@aws-sdk/client-s3": "^3.32.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
